--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,8 @@ sys:
   tty: true
   environment:
     - PLEX_allowedNetworks="0.0.0.0/0.0.0.0"
+  volumes:
+    - data:/var/lib/plexmediaserver
+    - media:/media
+  ports:
+    - 32400:32400
