--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ sys:
   restart: always
   tty: true
   environment:
-    - PLEX_allowedNetworks="0.0.0.0/0.0.0.0"
+    - PLEX_disableRemoteSecurity="1"
   volumes:
     - data:/var/lib/plexmediaserver
     - media:/media
