--- a/.semaphore/build
+++ b/.semaphore/build
@@ -3,6 +3,6 @@
 PLEX_DL=$(python3 scripts/plex_getlink.py)
 PLEX_VER=$(echo ${PLEX_DL} | awk -F "/" '{print $5}')
 
-docker build --build-arg PLEX_DL=${PLEX_DL} . 
+docker build --build-arg PLEX_DL=${PLEX_DL} -t alinuxninja/plex:${PLEX_VER} -t alinuxninja/plex:latest . 
 
 
