--- a/.circleci/build
+++ b/.circleci/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 ## Get Plex Info
-PLEX_DL=$(python3 scripts/plex_getlink.py)
+PLEX_DL=$(python scripts/plex_getlink.py)
 PLEX_VER=$(echo ${PLEX_DL} | awk -F "/" '{print $5}')
 
 ## Build Container
