--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,19 @@ jobs:
     machine: true
     steps:
       - checkout
+      - run:
+          name: Get Plex Download URL
+          command: |
+            echo 'export PLEX_DL=$(docker run -i -t -v $(pwd)/scripts/plex_getlink.py:/tmp/app.py python:3.6-alpine python /tmp/app.py)' >> $BASH_ENV
+            source $BASH_ENV
+      - run:
+          name: Get Plex Version
+          command: |
+            echo 'export PLEX_VERSION=$(echo ${PLEX_DL} | awk -F "/" '{print $5}')' >> $BASH_ENV
+            source $BASH_ENV)
       - run: 
           name: Build Plex Docker Container
-          command: bash .circleci/build
+          command: docker build --build-arg PLEX_DL=${PLEX_DL} -t catdeployed/plex:${PLEX_VERSION} -t catdeployed/plex:latest .
       - run:
           name: Skip this job for Pull Requests
           command: '[[ -v CIRCLE_PR_NUMBER ]] && circleci step halt || true'
