--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,12 @@ jobs:
       - run:
           name: Get Plex Download URL
           command: |
-            echo 'export PLEX_DL=$(docker run -i -t -v $(pwd)/scripts/plex_getlink.py:/tmp/app.py python:3.6-alpine python /tmp/app.py)' >> $BASH_ENV
+            echo $'export PLEX_DL=$(docker run -i -t -v $(pwd)/scripts/plex_getlink.py:/tmp/app.py python:3.6-alpine python /tmp/app.py)' >> $BASH_ENV
             source $BASH_ENV
       - run:
           name: Get Plex Version
           command: |
-            echo 'export PLEX_VERSION=$(echo ${PLEX_DL} | awk -F "/" '{print $5}')' >> $BASH_ENV
+            echo $'export PLEX_VERSION=$(echo ${PLEX_DL} | awk -F "/" \'{print $5}\')' >> $BASH_ENV
             source $BASH_ENV
       - run: 
           name: Build Plex Docker Container
