--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,12 @@ jobs:
             source $BASH_ENV
       - run: 
           name: Build Plex Docker Container
-          command: docker build --build-arg PLEX_DL=${PLEX_DL} -t catdeployed/plex:${PLEX_VERSION} -t catdeployed/plex:latest .
+          command: |
+            echo -n 'Plex Download Link: '
+            echo ${PLEX_DL}
+            echo -n 'Plex Version: '
+            echo ${PLEX_VERSION}
+            docker build --build-arg PLEX_DL=${PLEX_DL} -t catdeployed/plex:${PLEX_VERSION} -t catdeployed/plex:latest .
       - run:
           name: Skip this job for Pull Requests
           command: '[[ -v CIRCLE_PR_NUMBER ]] && circleci step halt || true'
