--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
       - run:
           name: Push to Docker Hub
           command: docker push catdeployed/plex
+          context: Docker Hub
 
 workflows:
   version: 2
