--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
           command: |
             echo $'export PLEX_VERSION=$(echo ${PLEX_DL} | awk -F "/" \'{print $5}\')' >> $BASH_ENV
             source $BASH_ENV
+      - run:
+          name: Check if version exists
+          command: docker pull catdeployed/plex:${PLEX_VERSION} && circleci step halt || true
       - run: 
           name: Build Plex Docker Container
           command: |
